--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,7 @@
 {
   "semi": false,
   "singleQuote": true,
+  "jsxSingleQuote": true,
   "printWidth": 100,
   "tabWidth": 2,
   "trailingComma": "none"
