Actualiza la configuración de Prettier para incluir el plugin 'prettier-plugin-tailwindcss' y modifica el archivo .prettierrc.json. Se añaden nuevas dependencias en package.json y bun.lock, incluyendo 'tw-animate-css'. Se crea un nuevo archivo globals.css para gestionar estilos globales y se implementan cambios en los componentes de la interfaz, como el ajuste de estilos en Login y AuthScreen, y la creación de nuevos componentes como ActiveTimer, Header, QuickActions, TodayTasks, TodaySummary y WeeklyChart.

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,5 +4,6 @@
   "jsxSingleQuote": true,
   "printWidth": 100,
   "tabWidth": 2,
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
